Fixes SGFE-420 (D4 PDP Slideshow paddle clipping)

--- a/docs/css/responsive-modules.css
+++ b/docs/css/responsive-modules.css
@@ -391,12 +391,12 @@
   top: 4px;
   bottom: 0;
   left: 0;
-  box-shadow: inset 5px 0 7px -5px #333;
+  box-shadow: inset 5px 0 7px -5px #333333;
 }
 /* line 89, ../../src/packages/modules/editorial-chapters-e5/css/_responsive-editorial-chapters-e5.scss */
 .editorial-chapters-container .thumb-nav .right-shade {
   left: auto;
-  box-shadow: inset -5px 0 7px -5px #333;
+  box-shadow: inset -5px 0 7px -5px #333333;
   right: 0;
 }
 
